--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@storybook/addon-a11y": "^6.5.12",
     "@storybook/addon-storysource": "^6.5.12",
     "@storybook/theming": "^6.5.12",
+    "axe-playwright": "^1.1.11",
     "gatsby": "^4.23.0",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.23.0",
