--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '16.x'
       - name: Restore yarn dependencies
         uses: actions/cache@v2
         id: yarn-cache
@@ -43,7 +43,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-v1
       - name: Install Playwright
-        run: npx playwright install --with-deps
+        run: npx playwright install --with-deps --silent
       - name: Build Storybook
         run: yarn build-storybook --quiet
       - name: Serve Storybook and run tests
