--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -43,7 +43,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-v1
       - name: Install Playwright
-        run: npx playwright install --with-deps --quiet
+        run: npx playwright install --with-deps
       - name: Build Storybook
         run: yarn build-storybook --quiet
       - name: Serve Storybook and run tests
