--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "storybook-addon-designs": "^6.3.1",
     "theme-ui": "^0.14.7"
   },
   "devDependencies": {
