--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@fontsource/montserrat": "^4.5.12",
+    "@splidejs/react-splide": "^0.7.12",
     "@storybook/addon-a11y": "^6.5.12",
     "@storybook/addon-storysource": "^6.5.12",
     "@storybook/theming": "^6.5.12",
